--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     html, body {
       margin: 0;
       padding: 0;
-      background: #0a0f2c;
-      overflow: hidden;
       height: 100%;
+      overflow: hidden;
       font-family: sans-serif;
+      background: linear-gradient(135deg, #0a0f2c, #1f1448, #000000);
     }
 
     canvas {
@@ -25,7 +25,7 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      color: white; 
+      color: white;
       font-size: 36px;
       font-weight: bold;
       z-index: 1;
@@ -58,10 +58,10 @@
       }
 
       reset() {
-        this.x = Math.random() * width;
-        this.y = Math.random() * -height;
+        this.x = Math.random() * width*1.5;
+        this.y = Math.random() * -height*0.5;
         this.length = Math.random() * 80 + 30;
-        this.speed = Math.random() * 1+ 3;
+        this.speed = Math.random() * 1 + 3;
         this.angle = Math.PI / 4; // 45度
         this.alpha = Math.random() * 0.5 + 0.5;
       }
