--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>tidebit</title>
+  
   <style>
     html, body {
       margin: 0;
@@ -34,6 +35,9 @@
   </style>
 </head>
 <body>
+  <div id="header-container"></div>
+
+
   <div class="center-text">🐷❤🐖</div>
   <canvas id="meteorCanvas"></canvas>
 
@@ -102,5 +106,9 @@
 
     animate();
   </script>
+
+
+  <div id="footer-container"></div>
+  <script src="load-components.js"></script>
 </body>
 </html>
