--- a/index.html
+++ b/index.html
@@ -1,114 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>tidebit</title>
-  
+  <meta charset="UTF-8" />
+  <title>Framer-Style SPA</title>
   <style>
     html, body {
       margin: 0;
       padding: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: #0a0f2c;
+      color: white;
       height: 100%;
       overflow: hidden;
-      font-family: sans-serif;
-      background: linear-gradient(135deg, #0a0f2c, #1f1448, #000000);
     }
 
     canvas {
-      position: absolute;
+      position: fixed;
       top: 0;
       left: 0;
-      z-index: 0;
+      z-index: -1;
+      pointer-events: none;
     }
 
-    .center-text {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+    .header {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 16px 32px;
+      background: rgba(255, 255, 255, 0.05);
+      backdrop-filter: blur(10px);
+      position: sticky;
+      top: 0;
+      z-index: 10;
+    }
+
+    .nav {
+      display: flex;
+      gap: 16px;
+    }
+
+    .nav a {
+      padding: 8px 16px;
+      border-radius: 999px;
+      text-decoration: none;
       color: white;
-      font-size: 36px;
+      font-weight: 500;
+      cursor: pointer;
+      transition: background 0.2s ease;
+    }
+
+    .nav a.active {
+      background: rgba(255, 255, 255, 0.2);
+    }
+
+    .login-btn {
+      margin-left: auto;
+      background: white;
+      color: #0a0f2c;
+      padding: 8px 20px;
+      border-radius: 12px;
       font-weight: bold;
-      z-index: 1;
-      text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+      text-decoration: none;
+    }
+
+    main {
+      padding: 60px 20px;
+      height: calc(100vh - 60px);
+      overflow-y: auto;
+    }
+
+    section {
+      display: none;
+      padding: 40px;
+    }
+
+    section.active {
+      display: block;
     }
   </style>
 </head>
 <body>
-  <div id="header-container"></div>
+  <canvas id="stars"></canvas>
 
+  <header class="header">
+    <nav class="nav">
+      <a class="active" onclick="showPage('home')">Home</a>
+      <a onclick="showPage('features')">Features</a>
+      <a onclick="showPage('about')">About</a>
+      <a onclick="showPage('contact')">Contact</a>
+    </nav>
+    <a class="login-btn" href="pages/login.html">Login</a>
+  </header>
 
-  <div class="center-text">🐷❤🐖</div>
-  <canvas id="meteorCanvas"></canvas>
+  <main>
+    <section id="home" class="active">
+      <h1>Home</h1>
+      <p>Welcome to the home section.</p>
+    </section>
+
+    <section id="features">
+      <h1>Features</h1>
+      <p>Here are our amazing features.</p>
+    </section>
+
+    <section id="about">
+      <h1>About</h1>
+      <p>About our project and vision.</p>
+    </section>
+
+    <section id="contact">
+      <h1>Contact</h1>
+      <p>Reach us at contact@example.com</p>
+    </section>
+  </main>
 
   <script>
-    const canvas = document.getElementById('meteorCanvas');
-    const ctx = canvas.getContext('2d');
-    let width, height;
-
-    function resizeCanvas() {
-      width = window.innerWidth;
-      height = window.innerHeight;
-      canvas.width = width;
-      canvas.height = height;
+    const navLinks = document.querySelectorAll(".nav a");
+    function showPage(id) {
+      document.querySelectorAll("section").forEach(sec => sec.classList.remove("active"));
+      document.getElementById(id).classList.add("active");
+      navLinks.forEach(link => link.classList.remove("active"));
+      event.target.classList.add("active");
     }
 
-    window.addEventListener('resize', resizeCanvas);
-    resizeCanvas();
+    // 星空动画
+    const canvas = document.getElementById("stars");
+    const ctx = canvas.getContext("2d");
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
 
-    class Meteor {
-      constructor() {
-        this.reset();
-      }
+    const stars = Array.from({length: 100}, () => ({
+      x: Math.random() * canvas.width,
+      y: Math.random() * canvas.height,
+      r: Math.random() * 1.5 + 0.5,
+      speed: Math.random() * 0.3 + 0.1
+    }));
 
-      reset() {
-        this.x = Math.random() * width*1.5;
-        this.y = Math.random() * -height*0.5;
-        this.length = Math.random() * 80 + 30;
-        this.speed = Math.random() * 1 + 3;
-        this.angle = Math.PI / 4; // 45度
-        this.alpha = Math.random() * 0.5 + 0.5;
-      }
-
-      update() {
-        this.x += this.speed * Math.cos(this.angle);
-        this.y += this.speed * Math.sin(this.angle);
-        if (this.y > height || this.x > width) {
-          this.reset();
-        }
-      }
-
-      draw(ctx) {
-        ctx.save();
+    function animateStars() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      for (const s of stars) {
+        s.y += s.speed;
+        if (s.y > canvas.height) s.y = 0;
         ctx.beginPath();
-        ctx.moveTo(this.x, this.y);
-        ctx.lineTo(this.x - this.length * Math.cos(this.angle), this.y - this.length * Math.sin(this.angle));
-        ctx.strokeStyle = `rgba(255, 255, 255, ${this.alpha})`;
-        ctx.lineWidth = 2;
-        ctx.stroke();
-        ctx.restore();
+        ctx.arc(s.x, s.y, s.r, 0, 2 * Math.PI);
+        ctx.fillStyle = "white";
+        ctx.fill();
       }
+      requestAnimationFrame(animateStars);
     }
+    animateStars();
 
-    const meteors = [];
-    for (let i = 0; i < 60; i++) {
-      meteors.push(new Meteor());
-    }
-
-    function animate() {
-      ctx.clearRect(0, 0, width, height);
-      meteors.forEach(meteor => {
-        meteor.update();
-        meteor.draw(ctx);
-      });
-      requestAnimationFrame(animate);
-    }
-
-    animate();
+    window.addEventListener("resize", () => {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    });
   </script>
-
-
-  <div id="footer-container"></div>
-  <script src="load-components.js"></script>
 </body>
 </html>
