fix some mistakes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Framer-Style SPA</title>
+  <title>Tidebit</title>
   <style>
     html, body {
       margin: 0;
@@ -95,7 +95,7 @@
   <main>
     <section id="home" class="active">
       <h1>Home</h1>
-      <p>Welcome to the home section.</p>
+      <p>🐖🐖🐖🐖🐖🐖🐖🐖🐖🐖🐖🐖🐖</p>
     </section>
 
     <section id="features">
