--- a/pages/login.html
+++ b/pages/login.html
@@ -125,7 +125,7 @@
         <button type="submit">Login</button>
       </form>
       <div class="register">
-        Don't have an account? <a href="register.html">Register now!</a>
+        Don't have an account? <a href="../index.html">Register now!</a>
       </div>
     </div>
 
