--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
       <h1>Home</h1>
       <p>🐖🐖🐖🐖🐖🐖🐖🐖🐖🐖🐖🐖🐖</p>
       <p>🐖🐖🐖🐖🐖🐖🐖🐖🐖🐖🐖🐖🐖</p>
+      <img src="img/pig1.png" alt="pig">
+
     
     
     </section>
