--- a/pages/chat.html
+++ b/pages/chat.html
@@ -115,7 +115,7 @@
       input.value = "";
 
       try {
-        const res = await fetch("https://tidebit-backend.onrender.com/api/chat", {
+        const res = await fetch("https://tidebit-backend.onrender.com/chat", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ message }),
@@ -130,7 +130,7 @@
 
     async function resetContext() {
       try {
-        const res = await fetch("https://tidebit-backend.onrender.com/api/reset", {
+        const res = await fetch("https://tidebit-backend.onrender.com/reset", {
           method: "POST"
         });
         const data = await res.json();
