--- a/index.html
+++ b/index.html
@@ -478,9 +478,9 @@
     </section>
     <section id="features">
       <a>mio configs</a><br>
-      <a href="download/BBTT.json" download class="download-btn">Download</a>
+      <a href="download/BBTT.json" download class="download-btn">Download</a></section></main><br>
 
-      <a href="./pages/chat.html" class="chat">AI chat</a>
+      <a href="./pages/chat.html" class="download-btn">chat</a>
       <div style="height: 500px;"></div>
 
 
