--- a/index.html
+++ b/index.html
@@ -367,6 +367,18 @@
       background-color: #3730a3;
     }
 
+    .chat {
+      display: inline-block;
+      background-color: #211e4f;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 8px;
+      text-decoration: none;
+    }
+    .chat:hover {
+      background-color: #3730a3;
+    }
+
     .footer {
       background: rgba(0, 0, 0, 0.4);
       color: #ccc;
@@ -477,12 +489,11 @@
     
     </section>
     <section id="features">
-      <a>mio configs</a><br>
-      <a href="download/BBTT.json" download class="download-btn">Download</a></section></main><br>
+      <a></a><br>
+      <!-- <a href="download/BBTT.json" download class="download-btn">Download</a><br> -->
 
-      <a href="./pages/chat.html" class="download-btn">chat</a>
+      <a href="./pages/chat.html" class="chat">chat</a>
       <div style="height: 500px;"></div>
-
 
     </section>
     
