--- a/index.html
+++ b/index.html
@@ -492,7 +492,8 @@
       <a></a><br>
       <!-- <a href="download/BBTT.json" download class="download-btn">Download</a><br> -->
 
-      <a href="./pages/chat.html" class="chat">chat</a>
+      <a href="./pages/chat.html" class="chat">chat</a><br>
+      <a href="./pages/status.html" class="status">status</a>
       <div style="height: 500px;"></div>
 
     </section>
