--- a/pages/status.html
+++ b/pages/status.html
@@ -105,9 +105,9 @@
 
   <script>
     const services = [
-      { id: 'login-dot', url: '/health/login', name: 'Login Service' },
-      { id: 'ai-dot', url: '/health/ai', name: 'AI Inference' },
-      { id: 'db-dot', url: '/health/db', name: 'Database' }
+      { id: 'login-dot', url: 'https://tidebit-backend.onrender.com/health/login', name: 'Login Service' },
+      { id: 'ai-dot', url: 'https://tidebit-backend.onrender.com/health/ai', name: 'AI Inference' },
+      { id: 'db-dot', url: 'https://tidebit-backend.onrender.com/health/db', name: 'Database' }
     ];
 
     async function checkServices() {
