--- a/index.html
+++ b/index.html
@@ -493,6 +493,7 @@
       <!-- <a href="download/BBTT.json" download class="download-btn">Download</a><br> -->
 
       <a href="./pages/chat.html" class="chat">chat</a><br>
+      <div style="height: 50px;"></div>
       <a href="./pages/status.html" class="status">status</a>
       <div style="height: 500px;"></div>
 
