--- a/pages/chat.html
+++ b/pages/chat.html
@@ -13,6 +13,7 @@
       display: flex;
       flex-direction: column;
       height: 100vh;
+      font-family: "Microsoft YaHei", "PingFang SC", "Noto Sans SC", Arial, sans-serif;
     }
     .chat-container {
       flex: 1;
