--- a/pages/chat.html
+++ b/pages/chat.html
@@ -6,14 +6,13 @@
   <title>AI chat box</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: Arial, sans-serif, "Microsoft YaHei", "PingFang SC", "Noto Sans SC", Arial, sans-serif;
       background: #f4f4f4;
       margin: 0;
       padding: 0;
       display: flex;
       flex-direction: column;
       height: 100vh;
-      font-family: "Microsoft YaHei", "PingFang SC", "Noto Sans SC", Arial, sans-serif;
     }
     .chat-container {
       flex: 1;
