--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Tidebit</title>
   <script defer src="https://cloud.umami.is/script.js" data-website-id="918b421f-f581-421e-b8fd-7e57ba807167"></script>
+  <script>etch("https://tidebit-backend.onrender.com/log-ip");</script>
   <style>
     html, body {
       margin: 0;
