create events and blogs

--- a/pages/chat.html
+++ b/pages/chat.html
@@ -104,7 +104,7 @@
 </head>
 <body>
   <header class="header">
-    <a class="back-btn" href="../index.html">←</a>
+    <a class="back-btn" href="../home.html">←</a>
   </header>
 
   <div class="chat-container" id="chat-container"></div>
