--- a/pages/status.html
+++ b/pages/status.html
@@ -85,7 +85,7 @@
 </head>
 <body>
   <header>
-    <a href="../index.html" class="back-btn">← Back</a>
+    <a href="../home.html" class="back-btn">← Back</a>
     🩺 System Status Monitor
   </header>
   <div class="container">
