--- a/home.html
+++ b/home.html
@@ -416,7 +416,7 @@
     </nav>
   
     <div class="login-btn" id="authArea">
-      <a href=#>Login</a>
+      <a href=index.thml>Logout</a>
     </div>
   </header>
 
